--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -25,7 +25,7 @@
 
     <!-- Profile -->
     <section class="profile-section">
-        <img src="https://via.placeholder.com/80" alt="Admin" class="profile-pic">
+        <img src="assets\admin.png" alt="Admin" class="profile-pic">
         <div>
             <h2>Admin</h2>
             <p>Role: Super Admin</p>
