--- a/citizen-home.html
+++ b/citizen-home.html
@@ -24,7 +24,7 @@
 
     <!-- Profile -->
     <section class="profile-section">
-        <img src="https://via.placeholder.com/80" alt="Profile" class="profile-pic">
+        <img src="assets\citizen.png" alt="Profile" class="profile-pic">
         <div>
             <h2>Citizen Name</h2>
             <p>Mobile: 9876543210</p>
