--- a/driver-home.html
+++ b/driver-home.html
@@ -23,7 +23,7 @@
 
     <!-- Profile -->
     <section class="profile-section">
-        <img src="https://via.placeholder.com/80" alt="Driver" class="profile-pic">
+        <img src="assets\worker.png" alt="Driver" class="profile-pic">
         <div>
             <h2>Driver Name</h2>
             <p>Route: Zone 3</p>
