--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
 
                 <!-- Submit -->
                 <button type="submit" class="btn">Login</button>
-                <a href="citizen-home.html" class="btn">Citizen</a>
+
+
+                <!-- <a href="citizen-home.html" class="btn">Citizen</a>
                 <a href="driver-home.html" class="btn">Driver</a>
-                <a href="admin-dashboard.html" class="btn">Admin</a>
+                <a href="admin-dashboard.html" class="btn">Admin</a> -->
 
 
                 <p class="signup-text">
